--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <html ng-app="generator">
 	<head>
 		<title>gigigig</title>
+		<link href="mainStyleSheet.css" rel="stylesheet" type="text/css" />
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular.min.js"></script>
-		
 	</head>
-	<body>
-		<div ng-controller="mazeController as maze">
-			{{5+5}}
-			<canvas id="canvas" width="{{15*maze.n}}" height="{{15*maze.n}}">
+	<body><center>
+		<div class="container" ng-controller="mazeController as maze">
+			Enter maze size: <input name="size" type="number" ng-model="maze.n"/> (1-40)
+			<div class="refresh" ng-click="maze.initMaze()"> Generate maze... </div>
+			<canvas id="canvas" width="{{15*maze.n}}" height="{{15*maze.n}}" ng-show="maze.showMaze">
 				
 			</canvas>
 			
-			<button ng-click="maze.initMaze()">GoGoGo!!!</button>
+			
 		</div>
+		created by: liran markin & noam golani 
+		</center>
 		<script src="generator.js"></script>
 	</body>
 		
