--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html ng-app="generator">
 	<head>
-		<title>gigigig</title>
+		<title>maze-generator</title>
 		<link href="mainStyleSheet.css" rel="stylesheet" type="text/css" />
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular.min.js"></script>
 	</head>
