set min-max of input

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body><center>
 		<div class="container" ng-controller="mazeController as maze">
-			Enter maze size: <input name="size" type="number" ng-model="maze.n"/> (1-50)
+			Enter maze size: <input name="size" type="number" ng-model="maze.n" min="1" max="50"/> (1-50)
 			<div class="refresh" ng-click="maze.initMaze()"> Generate maze... </div>
 			<canvas id="canvas" width="{{15*maze.n}}" height="{{15*maze.n}}" ng-show="maze.showMaze">
 				
